# WanderWise

./: .dockerignore  .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: architecture.md  deployment.md  index.md  troubleshooting.md  usage.md
src/wanderwise/: __init__.py  config.py  main.py
src/wanderwise/adapters/: __init__.py
src/wanderwise/adapters/gateways/: openai_gateway.py
src/wanderwise/adapters/storage/: in_memory_storage.py
src/wanderwise/application/: __init__.py
src/wanderwise/application/services/: itinerary_service.py
src/wanderwise/application/use_cases/: generate_itinerary.py
src/wanderwise/domain/: __init__.py
src/wanderwise/domain/models/: __init__.py  itinerary.py
src/wanderwise/domain/ports/: __init__.py  llm_port.py  storage_port.py
src/wanderwise/infrastructure/: __init__.py  logging.py
src/wanderwise/presentation/: __init__.py  dependencies.py
src/wanderwise/presentation/routers/: __init__.py  itinerary_router.py
src/wanderwise/presentation/static/: manifest.json  offline.html
src/wanderwise/presentation/static/css/: main.css  map.css
src/wanderwise/presentation/static/js/: drag-and-drop.js  map.js  service-worker.js
src/wanderwise/presentation/templates/: __init__.py  base.html  error.html  index.html
src/wanderwise/presentation/templates/partials/: error_display.html  itinerary_display.html  loading_indicator.html  map_component.html
