# pyproject.toml

# This file defines the project metadata, dependencies, and development tool configurations.
# It is managed by Poetry, ensuring a consistent and reproducible environment for all developers.

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "wanderwise"
version = "0.1.0"
description = "WanderWise: The AI-Powered Travel Itinerary Planner"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "wanderwise", from = "src"}]
homepage = "https://github.com/your-repo/wanderwise"
repository = "https://github.com/your-repo/wanderwise"
documentation = "https://github.com/your-repo/wanderwise/blob/main/docs/index.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
# Core application dependencies
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
pydantic = {extras = ["email"], version = "^2.8.2"}
pydantic-settings = "^2.3.4"
jinja2 = "^3.1.4"
python-dotenv = "^1.0.1"
openai = "^1.35.7"
httpx = "^0.27.0"
python-multipart = "^0.0.9" # Required for FastAPI to handle form data

[tool.poetry.group.dev.dependencies]
# Development and testing dependencies
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.23.7"
black = "^24.4.2"
flake8 = "^7.1.0"
isort = "^5.13.2"
mypy = "^1.10.0"
bandit = "^1.7.9"

# Configuration for our code quality tools
[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
